--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,39 @@
-<html>
-<head>
-<title>Welcome to SchoolShare!</title>
-</head>
+<!DOCTYPE>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title> School Share </title>
 
-<body>
+  </head>
 
-</body>
+  <body>
+    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+      <div class="container">
+	<div class="navbar-header">
+	  <button type="button" class="navbar-toggle" data-toggle"collapse" data-target=".navbar-collapse">
+	    <span class="icon-bar"> </span>
+	    <span class="icon-bar"> </span>
+	    <span class="icon-bar"> </span>
+	  </button>
+	  <a class="navbar-brand" href="/home" > School Share </a>
+	 </div>
+	<div class="collapse navbar-collapse">
+	  <ul class="nav navbar-nav">
+	    <li class="active"> <a href="/login" > Logout </a> </li>
+	  </ul>
+	 </div>
+	</div>
+      </div>
 
-</html>
+    <div class="container">
+      <div class="row row-offcanvas row-offcanvas-right">
+	<div class="col-xs-12 colo-sm-9">
+	  <p class="pull-right visible-xs">
+	    <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"> Toggle nav </button>
+	  </p>
+
+	  <div class="jumbotron">
+	    <h1> School Share </h1>
+	    <p> Share study guides, notes, and tips amongst your fellow classmates. Find your schools and classes, or access other schools for new experiences!</p>
+
+	  </div>
