--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <!-- Loading Bootstrap -->
+    <link href="../static/bootstrap/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Loading Flat UI -->
+    <link href="../static/css/flat-ui.css" rel="stylesheet">
+    <link href="../static/css/demo.css" rel="stylesheet">
     <title> School Share </title>
 
   </head>
