--- a/templates/home.html
+++ b/templates/home.html
@@ -15,30 +15,23 @@
   <body>
     <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
-	<div class="navbar-header">
+	<!--<div class="navbar-header">
 	  <button type="button" class="navbar-toggle" data-toggle"collapse" data-target=".navbar-collapse">
 	    <span class="icon-bar"> </span>
 	    <span class="icon-bar"> </span>
 	    <span class="icon-bar"> </span>
-	  </button>
+	  </button> -->
 	  <a class="navbar-brand" href="/home" > School Share </a>
 	 </div>
 	<div class="collapse navbar-collapse">
 	  <ul class="nav navbar-nav">
-	    <li class="active"> <a href="/login" > Logout </a> </li>
+	    <li style="text-align:right;" class="active"> <a href="/login" > Logout </a> </li>
 	  </ul>
 	 </div>
 	</div>
       </div>
 
-    <div class="container">
-      <div class="row row-offcanvas row-offcanvas-right">
-	<div class="col-xs-12 colo-sm-9">
-	  <p class="pull-right visible-xs">
-	    <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"> Toggle nav </button>
-	  </p>
-
-	  <div class="jumbotron">
+      <div class="jumbotron">
 	    <h1> School Share </h1>
 	    <p> Share study guides, notes, and tips amongst your fellow classmates. Find your schools and classes, or access other schools for new experiences!</p>
 
