--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,25 +11,28 @@
    </head>
 
   <body>
-    <div class="row demo-row">
+
+           <div class="row demo-row">
+      <!--Navbar-->
       <div class="col-xs-9">
 	<nav class="navbar navbar-inverse navbar-embossed" role="navigation">
 	  <div class="navbar-header">
 	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01"> 
 	      <span class="sr-only">Toggle navigation </span>
 	    </button>
-	   </div>
-	 <div class="collapse navbar-collapse" id="navbar-collapse-01">
-	   <ul class="nav navbar-nav navbar-left">
-	     <li><a href="/home"> School Share <span class="navbar-unread">1</span> </a></li>
+	    <div class="collapse navbar-collapse" id="navbar-collapse-01">
+	      <ul class="nav navbar-nav navbar-left">
+		<li><a href="/home"> School Share <span class="navbar-unread">1</span> </a></li>
 
-	     <li class="dropdown">
-	       <a href="/classes" class="dropdown-toggle" data-toggle="dropdown"> Classes <b class="caret"> </b> </a>
-	       <span class="dropdown-arrow"></span>
+		<li class="dropdown">
+		  <a href="/classes" class="dropdown-toggle" data-toggle="dropdown"> Classes <b class="caret"> </b> </a>
+		  <span class="dropdown-arrow"></span>
 	       <ul class="dropdown-menu">
 		 <li> <a href"#"> Classes Go Here </a> </li>
 	       </ul>
 	      </li>
-
+	     </ul>
+	     </div>
+-->
 	     
 		 
