--- a/templates/school.html
+++ b/templates/school.html
@@ -1,3 +1,19 @@
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <!-- Loading Bootstrap -->
+    <link href="../static/bootstrap/css/bootstrap.css" rel="stylesheet">
+
+    <!-- Loading Flat UI -->
+    <link href="../static/css/flat-ui.css" rel="stylesheet">
+    <link href="../static/css/demo.css" rel="stylesheet">
+    <title> School Share </title>
+
+  </head>
+  
+  <body>
+    
+  </body>
 
 </html>
