put school info in school.html

--- a/templates/school.html
+++ b/templates/school.html
@@ -13,6 +13,14 @@
   </head>
   
   <body>
+  
+    <h1>{{schoolname}}</h1>
+    
+    <ul>
+        {% for class in classes %}
+            <li>{{class}}</li>
+        {% endfor %}
+    </ul>
     
   </body>
 
