--- a/templates/docerror.html
+++ b/templates/docerror.html
@@ -16,12 +16,8 @@
   
   <body>
   
-    <h1>Upload Document</h1>
-    <form action="upload_file.php" method="post" enctype="multipart/form-data">
-      <label for="file">Filename:</label>
-      <input type="file" name="file" id="file"><br>
-      <input type="submit" name="submit" value="Submit">
-    </form>
+    <h1>Document Error</h1>
+    <script>alert("You've uploaded an empty document, please try again")</script> <!--put in link to upload pg-->
   </body>
 
 </html>
