--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,15 @@
     <!-- Loading Flat UI -->
     <link href="../static/css/flat-ui.css" rel="stylesheet">
     <link href="../static/css/demo.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+     <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" href="../static/modal.css">
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script> 
+    <script src="../static/index.js"></script>
+    
     <title> School Share </title>
 
   </head>
@@ -35,4 +44,35 @@
 	    <h1> School Share </h1>
 	    <p> Share study guides, notes, and tips amongst your fellow classmates. Find your schools and classes, or access other schools for new experiences!</p>
 
+      </div>
+
+      <div class="pure-u-1-3" align="center">
+	<a class="pure-button" href="#login" style="background-color:#E0FFFF">
+	  <i class="fa fa-sign-in"></i>
+		  Sign In!    
+	</a>
+      </div>
+
+
+      <section class="semantic-content" id="login" tabindex="-1"
+	       role="dialog" aria-labelledby="login" aria-hidden="true">
+	<div class="modal-inner" style="letter-spacing:0em">
+	  <header id="login">
+	    <h1> Login </h1> 
+	  </header>
+	  <div class="modal-content" align="center">
+	    <p>
+	      Welcome back to groupvent! 
+	      <br> 
+	      Enter your username and password below to login.
+	    </p>
+	    <form class="pure-form pure-form-stacked" action="/login" method="post">
+	      <input name="username" type="text" placeholder="Username" required>
+	      <input name="password" type="password" placeholder="Password" required>
+	      <br>
+	      <button class="pure-button pure-button-primary" type="submit">Login</button>
+	    </form>
 	  </div>
+
+	  <a href="#!" class="modal-close" title="Close this modal" data-close="Close" data-dismiss="modal">x</a>
+      </section>
