--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
 	  </header>
 	  <div class="modal-content" align="center">
 	    <p>
-	      Welcome back to groupvent! 
+	      Welcome back to SchoolShare! 
 	      <br> 
 	      Enter your username and password below to login.
 	    </p>
