--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <!-- Loading Bootstrap -->
-    <link href="../static/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.css" rel="stylesheet">
 
     <!-- Loading Flat UI -->
     <link href="../static/css/flat-ui.css" rel="stylesheet">
