--- a/templates/home.html
+++ b/templates/home.html
@@ -68,11 +68,11 @@
 	    </p>
 
 	    <form class="pure-form pure-form-stacked" action="/login" method="post">
-	      <input name="first" type="text" placeholder "First Name" required>
-	      <input name="last" type="text" placeholder= "Last Name" required>
+	     <input name="first" type="text" placeholder="First Name" required>
+	      <input name="last" type="text" placeholder="Last Name" required>
 	      <input name="username" type="text" placeholder="Username" required>
 	      <input name="password" type="password" placeholder="Password" required>
-	      <input name="email" tpe="text" placeholder="Email" required>
+	      <input name="email" type="text" placeholder="Email" required>
 	      <button class="pure-button pure-button-primary" type="submit"> Register </button>
 	    </form>
 
