--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-     <link rel="stylesheet" href="../static/index.css">
+    <link rel="stylesheet" href="../static/index.css">
     <link rel="stylesheet" href="../static/modal.css">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script> 
@@ -25,91 +25,91 @@
     <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
 	<!--<div class="navbar-header">
-	  <button type="button" class="navbar-toggle" data-toggle"collapse" data-target=".navbar-collapse">
-	    <span class="icon-bar"> </span>
-	    <span class="icon-bar"> </span>
-	    <span class="icon-bar"> </span>
-	  </button> -->
-	  <a class="navbar-brand" href="/home" > School Share </a>
-	 </div>
-	<div class="collapse navbar-collapse">
-	  <ul class="nav navbar-nav">
-	    <li style="text-align:right;" class="active"> <a href="/login" > Logout </a> </li>
-	  </ul>
-	 </div>
+	    <button type="button" class="navbar-toggle" data-toggle"collapse" data-target=".navbar-collapse">
+	      <span class="icon-bar"> </span>
+	      <span class="icon-bar"> </span>
+	      <span class="icon-bar"> </span>
+	    </button> -->
+	<a class="navbar-brand" href="/home" > School Share </a>
+      </div>
+      <div class="collapse navbar-collapse">
+	<ul class="nav navbar-nav">
+	  <li style="text-align:right;" class="active"> <a href="/login" > Logout </a> </li>
+	</ul>
+      </div>
+    </div>
+
+    <div class="jumbotron">
+      <h1> School Share </h1>
+      <p> Share study guides, notes, and tips amongst your fellow classmates. Find your schools and classes, or access other schools for new experiences!</p>
+
+    </div>
+
+    <div class="pure-u-1-3" align="center">
+      <a class="pure-button" href="#register" style="background-color:#E0FFFF">
+	<i class="fa fa-sign-in"></i>
+	Register!    
+      </a>
+    </div>
+    
+    <section class="semantic-content" id="register" tabindex="-1"
+	     role="dialog" aria-labelledby="register" aria-hidden="true">
+      <div class="modal-inner" style="letter-spacing:0em">
+	<header id="register">
+	  <h1> Register </h1>
+	</header>
+	
+	<div class="modal-content" align="center">
+	  <p>
+	    Welcome to SchoolShare!
+	    <br>
+	    Making an account with SchoolShare will open up a variety of new opportunities and ways to explore. Submit your own study guides to help others and subscribe to the classes you're taking right now to always stay updated! Simple fill out the form below to be on your way to an easier way of studying.
+	  </p>
+
+	  <form class="pure-form pure-form-stacked" action="/login" method="post">
+	    <input name="first" type="text" placeholder="First Name" required>
+	    <input name="last" type="text" placeholder="Last Name" required>
+	    <input name="username" type="text" placeholder="Username" required>
+	    <input name="password" type="password" placeholder="Password" required>
+	    <input name="email" type="text" placeholder="Email" required>
+	    <button class="pure-button pure-button-primary" type="submit"> Register </button>
+	  </form>
+
 	</div>
       </div>
 
-      <div class="jumbotron">
-	    <h1> School Share </h1>
-	    <p> Share study guides, notes, and tips amongst your fellow classmates. Find your schools and classes, or access other schools for new experiences!</p>
+      <a href="#!" class="modal-close" title="Close this modal" data-close="Close" data-dismiss="modal">x</a>
+    </section>
 
-      </div>
 
-      <div class="pure-u-1-3" align="center">
-	<a class="pure-button" href="#register" style="background-color:#E0FFFF">
-	  <i class="fa fa-sign-in"></i>
-		  Register!    
-	</a>
-      </div>
+    <div class="pure-u-1-3" align="center">
+      <a class="pure-button" href="#login" style="background-color:#E0FFFF">
+	<i class="fa fa-sign-in"></i>
+	Login!    
+      </a>
+    </div>
 
-      <section class="semantic-content" id="login" tabindex="-1"
-	       role="dialog" aria-labelledby="register" aria-hidden="true">
-	<div class="modal-inner" style="letter-spacing:0em">
-	  <header id="register">
-	    <h1> Register </h1>
-	  </header>
-	 
-	  <div class="modal-content" align="center">
-	    <p>
-	      Welcome to SchoolShare!
-	      <br>
-	      Making an account with SchoolShare will open up a variety of new opportunities and ways to explore. Submit your own study guides to help others and subscribe to the classes you're taking right now to always stay updated! Simple fill out the form below to be on your way to an easier way of studying.
-	    </p>
 
-	    <form class="pure-form pure-form-stacked" action="/login" method="post">
-	     <input name="first" type="text" placeholder="First Name" required>
-	      <input name="last" type="text" placeholder="Last Name" required>
-	      <input name="username" type="text" placeholder="Username" required>
-	      <input name="password" type="password" placeholder="Password" required>
-	      <input name="email" type="text" placeholder="Email" required>
-	      <button class="pure-button pure-button-primary" type="submit"> Register </button>
-	    </form>
-
-	  </div>
+    <section class="semantic-content" id="login" tabindex="-1"
+	     role="dialog" aria-labelledby="login" aria-hidden="true">
+      <div class="modal-inner" style="letter-spacing:0em">
+	<header id="login">
+	  <h1> Login </h1> 
+	</header>
+	<div class="modal-content" align="center">
+	  <p>
+	    Welcome back to SchoolShare! 
+	    <br> 
+	    Enter your username and password below to login.
+	  </p>
+	  <form class="pure-form pure-form-stacked" action="/login" method="post">
+	    <input name="username" type="text" placeholder="Username" required>
+	    <input name="password" type="password" placeholder="Password" required>
+	    <br>
+	    <button class="pure-button pure-button-primary" type="submit">Login</button>
+	  </form>
 	</div>
-
-	<a href="#!" class="modal-close" title="Close this modal" data-close="Close" data-dismiss="modal">x</a>
-      </section>
-
-
-      <div class="pure-u-1-3" align="center">
-	<a class="pure-button" href="#login" style="background-color:#E0FFFF">
-	  <i class="fa fa-sign-in"></i>
-		  Login!    
-	</a>
       </div>
-
-
-      <section class="semantic-content" id="login" tabindex="-1"
-	       role="dialog" aria-labelledby="login" aria-hidden="true">
-	<div class="modal-inner" style="letter-spacing:0em">
-	  <header id="login">
-	    <h1> Login </h1> 
-	  </header>
-	  <div class="modal-content" align="center">
-	    <p>
-	      Welcome back to SchoolShare! 
-	      <br> 
-	      Enter your username and password below to login.
-	    </p>
-	    <form class="pure-form pure-form-stacked" action="/login" method="post">
-	      <input name="username" type="text" placeholder="Username" required>
-	      <input name="password" type="password" placeholder="Password" required>
-	      <br>
-	      <button class="pure-button pure-button-primary" type="submit">Login</button>
-	    </form>
-	  </div>
-	 </div>
-	  <a href="#!" class="modal-close" title="Close this modal" data-close="Close" data-dismiss="modal">x</a>
-      </section>
+      <a href="#!" class="modal-close" title="Close this modal" data-close="Close" data-dismiss="modal">x</a>
+    </section>
+  </body>
