--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,16 @@
         <!-- Loading Flat UI -->
         <link href="../static/css/flat-ui.css" rel="stylesheet">
         <link href="../static/css/demo.css" rel="stylesheet">
+        
+        <link href="../static/index.css" rel="stylesheet">
+        
         <script src="../static/js/jquery-2.0.3.min.js"></script>
         <script src="../static/js/bootstrap.min.js"></script>
+        
     </head>
     
     <body>
-        <h1 id="title" > SCHOOL SHARE </h1>
+        <h1  id = "title" > SCHOOLSHARE </h1>
         
     </body>
 </html>
