--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                         <h1> Register </h1>
                     </header>
 
-                    <div class="modal-content" align="center">
+                    <div class="modal-content" align="center" style="overflow: hidden;">
                         <p> Welcome to School Share!
                             <br>
                             Just fill out the form below to be on your way to an easier world of studying.
