--- a/templates/home.html
+++ b/templates/home.html
@@ -1,115 +1,130 @@
-<!DOCTYPE>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <!-- Loading Bootstrap -->
-    <link href="../static/bootstrap/css/bootstrap.css" rel="stylesheet">
+<!DOCTYPE html>
+<html>
 
-    <!-- Loading Flat UI -->
-    <link href="../static/css/flat-ui.css" rel="stylesheet">
-    <link href="../static/css/demo.css" rel="stylesheet">
+<head>
+	<meta charset="utf-8">
+	<title>School Share</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <link rel="stylesheet" href="../static/index.css">
-    <link rel="stylesheet" href="../static/modal.css">
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script> 
-    <script src="../static/index.js"></script>
-    
-    <title> School Share </title>
+	<!-- Loading Bootstrap -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<!--<link href="{{url_for('static', filename='css/bootstrap.css')}}" rel="stylesheet">-->
 
-  </head>
+	<!-- Loading Flat UI -->
+	<!--<link href="{{url_for('static', filename='css/flat-ui.css')}}" rel="stylesheet">-->
+	<!--<link href="../static/css/demo.css" rel="stylesheet">
 
-  <body>
-    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
-      <div class="container">
-	<!--<div class="navbar-header">
-	    <button type="button" class="navbar-toggle" data-toggle"collapse" data-target=".navbar-collapse">
-	      <span class="icon-bar"> </span>
-	      <span class="icon-bar"> </span>
-	      <span class="icon-bar"> </span>
-	    </button> -->
-	<a class="navbar-brand" href="/home" > School Share </a>
-      </div>
-      <div class="collapse navbar-collapse">
-	<ul class="nav navbar-nav">
-	  <li style="text-align:right;" class="active"> <a href="/login" > Logout </a> </li>
-	</ul>
-      </div>
-    </div>
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">-->
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+	<link rel="stylesheet" href="{{url_for('static', filename='index.css')}}">
+	<!--
+	<link rel="stylesheet" href="../static/modal.css">-->
 
-    <div class="jumbotron">
-      <h1> School Share </h1>
-      <p> Share study guides, notes, and tips amongst your fellow classmates. Find your schools and classes, or access other schools for new experiences!</p>
+	<!--<script src="../static/index.js"></script>-->
+	<script>
+	$(document).ready(function() {
+		$('#logout').click();
+	});
+	</script>
+</head>
 
-    </div>
-
-    <div class="pure-u-1-3" align="center">
-      <a class="pure-button" href="#register" style="background-color:#E0FFFF">
-	<i class="fa fa-sign-in"></i>
-	Register!    
-      </a>
-    </div>
-    
-    <section class="semantic-content" id="register" tabindex="-1"
-	     role="dialog" aria-labelledby="register" aria-hidden="true">
-      <div class="modal-inner" style="letter-spacing:0em">
-	<header id="register">
-	  <h1> Register </h1>
-	</header>
-	
-	<div class="modal-content" align="center">
-	  <p>
-	    Welcome to SchoolShare!
-	    <br>
-	    Making an account with SchoolShare will open up a variety of new opportunities and ways to explore. Submit your own study guides to help others and subscribe to the classes you're taking right now to always stay updated! Simple fill out the form below to be on your way to an easier way of studying.
-	  </p>
-
-	  <form class="pure-form pure-form-stacked" action="/login" method="post">
-	    <input name="first" type="text" placeholder="First Name" required>
-	    <input name="last" type="text" placeholder="Last Name" required>
-	    <input name="username" type="text" placeholder="Username" required>
-	    <input name="password" type="password" placeholder="Password" required>
-	    <input name="email" type="text" placeholder="Email" required>
-	    <button class="pure-button pure-button-primary" type="submit"> Register </button>
-	  </form>
-
+<body>
+	<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="{{url_for('home')}}">School Share</a>
+			</div>
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					{% if loggedIn %}
+					<a href="/logout" id="logout" type="button" class="btn btn-primary navbar-btn">
+						<i class="fa fa-sign-out"></i>
+						Logout
+					</a>
+					{% else %}
+					<button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#register-modal">Register</button>
+					<button type="button" class="btn btn-primary navbar-btn" data-toggle="modal" data-target="#login-modal">
+						<i class="fa fa-sign-in"></i>
+						Login
+					</button>
+					{% endif %}
+				</ul>
+			</div>
+		</div>
 	</div>
-      </div>
-
-      <a href="#!" class="modal-close" title="Close this modal" data-close="Close" data-dismiss="modal">x</a>
-    </section>
-
-
-    <div class="pure-u-1-3" align="center">
-      <a class="pure-button" href="#login" style="background-color:#E0FFFF">
-	<i class="fa fa-sign-in"></i>
-	Login!    
-      </a>
-    </div>
-
-
-    <section class="semantic-content" id="login" tabindex="-1"
-	     role="dialog" aria-labelledby="login" aria-hidden="true">
-      <div class="modal-inner" style="letter-spacing:0em">
-	<header id="login">
-	  <h1> Login </h1> 
-	</header>
-	<div class="modal-content" align="center">
-	  <p>
-	    Welcome back to SchoolShare! 
-	    <br> 
-	    Enter your username and password below to login.
-	  </p>
-	  <form class="pure-form pure-form-stacked" action="/login" method="post">
-	    <input name="username" type="text" placeholder="Username" required>
-	    <input name="password" type="password" placeholder="Password" required>
-	    <br>
-	    <button class="pure-button pure-button-primary" type="submit">Login</button>
-	  </form>
+	<div class="jumbotron">
+		<div class="container">
+			<h1>School Share</h1>
+			<p>Share study guides, notes, and tips amongst your fellow classmates. Find your schools and classes, or access other schools for new experiences!</p>
+		</div>
 	</div>
-      </div>
-      <a href="#!" class="modal-close" title="Close this modal" data-close="Close" data-dismiss="modal">x</a>
-    </section>
-  </body>
+
+	{% if not loggedIn %}
+		<div id="register-modal" class="modal fade" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title">Register</h4>
+					</div>
+					<div class="modal-body">
+						<p>
+							Welcome to SchoolShare!
+							<br>
+							<br>
+							Making an account with SchoolShare will open up a variety of new opportunities and ways to explore. Submit your own study guides to help others and subscribe to the classes you're taking right now to always stay updated! Simple fill out the form below to be on your way to an easier way of studying.
+						</p>
+						<form role="form" action="/register" method="post">
+							<div class="form-group">
+								<input class="form-control" name="first" type="text" placeholder="First Name" required>
+							</div>
+							<div class="form-group">
+								<input class="form-control" name="last" type="text" placeholder="Last Name" required>
+							</div>
+							<div class="form-group">
+								<input class="form-control" name="username" type="text" placeholder="Username" required>
+							</div>
+							<div class="form-group">
+								<input class="form-control" name="password" type="password" placeholder="Password" required>
+							</div>
+							<div class="form-group">
+								<input class="form-control" name="email" type="text" placeholder="Email" required>
+							</div>
+							<button class="btn btn-default" type="submit">Register</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="login-modal" class="modal fade" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<h4 class="modal-title">Login</h4>
+					</div>
+					<div class="modal-body">
+						<p>
+							Welcome back to SchoolShare!
+							<br>
+							<br>
+							Enter your username and password below to login.
+						</p>
+						<form role="form" action="/login" method="post">
+							<div class="form-group">
+								<input class="form-control" name="username" type="text" placeholder="Username" required>
+							</div>
+							<div class="form-group">
+								<input class="form-control" name="password" type="password" placeholder="Password" required>
+							</div>
+							<button class="btn btn-default" type="submit">Login</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+	{% endif %}
+</body>
