--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,7 @@
       				</ul>
       			</li>	
       			<li>
-      				<a href="/profile" style="font-size:18";>Profile</a>
+      				<a hre" style="font-size:18";>Profile</a>
 
       			</li>
       		</ul>
