--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,13 +32,13 @@
       				<span class="drowndown-arrow"></span>
       				<ul class="dropdown-menu">
       					<li>
-      						<a href="#">something</a>
+      						<a href="/addsubject">Add Subject</a>
       					</li>
       					<li>
-      						<a href="#">something</a>
+      						<a href="/addclass">Add Class</a>
       					</li>
       					<li>
-      						<a href="#">something</a>
+      						<a href="/editprofile">Edit Profile</a>
       					</li>
       				</ul>
       			</li>	
