--- a/templates/class.html
+++ b/templates/class.html
@@ -16,6 +16,8 @@
   
   <body>
   
+  <a href="/ViewerJS/#../path/to/<filename>">
+  
     <h1>Upload Document</h1>
     <form action="upload_file.php" method="post" enctype="multipart/form-data">
       <label for="file">Filename:</label>
