--- a/templates/class.html
+++ b/templates/class.html
@@ -16,7 +16,7 @@
   
   <body>
   
-  <a href="/ViewerJS/#../path/to/<filename>.pdf">
+{{jsname}} 
   
     <h1>Upload Document</h1>
     <form action="upload_file.php" method="post" enctype="multipart/form-data">
