--- a/templates/home.html
+++ b/templates/home.html
@@ -128,8 +128,9 @@
     </div>
     {% endif %}
     {% if loggedIn %}
-
+    <div class="navbar-header">
     <a href = "/profile" button type="button" class="btn btn-default">Profile</button></a>
+   </div>
    {% endif %}
 
 </body>
