--- a/templates/home.html
+++ b/templates/home.html
@@ -128,8 +128,12 @@
     </div>
     {% endif %}
     {% if loggedIn %}
+    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+    <div class="container">
     <div class="navbar-header">
     <a href = "/profile" button type="button" class="btn btn-default">Profile</button></a>
+   </div>
+   </div>
    </div>
    {% endif %}
 
