--- a/templates/home.html
+++ b/templates/home.html
@@ -128,10 +128,12 @@
     </div>
     {% endif %}
     {% if loggedIn %}
-    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+    <div class="navbar navbar-fixed-top" role="navigation">
     <div class="container">
-    <div class="navbar-header">
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
     <a href = "/profile" button type="button" class="btn btn-default">Profile</button></a>
+    </ul>  
    </div>
    </div>
    </div>
