--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,30 +2,30 @@
 <!DOCTYPE>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8">
-    <title> Profile Page </title>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
-    <link rel="stylesheet" href="../static/profile.css">
-    <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>	
-  </head>		
-  
-  <body>
-    <div class="hero">
-      <div class="hero-titles"> 
-	<h1> {{username}}'s Profile </h1>
-  <br>
-  <a class="pure-button" href="/addclass">A Pure Button</a>
-	<h2> Classes You Have Contributed To: </h2>
-      </div>
-    </div>
-    
-    <div class="pure-g">
-      <div class="pure-u-1-3">
-      </div>
+<head>
+	<meta charset="utf-8">
+	<title>Profile Page</title>
+	<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+	<link rel="stylesheet" href="../static/profile.css">
+	<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+</head>
 
-      <div class="pure-u-1-3" align="center">
-  <!--js not edited 
+<body>
+	<div class="hero">
+		<div class="hero-titles">
+			<h1>{{username}}'s Profile</h1>
+			<br>
+			<a class="pure-button" href="/addclass">A Pure Button</a>
+			<h2>Classes You Have Contributed To:</h2>
+		</div>
+	</div>
+
+	<div class="pure-g">
+		<div class="pure-u-1-3">
+		</div>
+
+		<div class="pure-u-1-3" align="center">
+			<!--js not edited 
 	{% if events %}
 	<ul>
 	  {% for item in events %}
@@ -36,13 +36,12 @@
 	<p> You have no events!! </p>
 
   -->
-	<br> 
-	{% endif %} 
-      </div>
-      <div class="pure-u-1-3">
-      </div>
-    </div>
-    
-  </body>
-  
+			<br>{% endif %}
+		</div>
+		<div class="pure-u-1-3">
+		</div>
+	</div>
+
+</body>
+
 </html>
