add class button

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,7 +15,7 @@
 		<div class="hero-titles">
 			<h1>{{username}}'s Profile</h1>
 			<br>
-			<a class="pure-button" href="/addclass">A Pure Button</a>
+			<a class="pure-button" href="/addclass">Add Class</a>
 			<h2>Classes You Have Contributed To:</h2>
 		</div>
 	</div>
