--- a/templates/addclass.html
+++ b/templates/addclass.html
@@ -22,7 +22,7 @@
         </select>
 
     
-        <button type="submit" class="pure-button pure-button-primary">Submit</button>
+        <a href = "/classes/<classname>" button type="submit" class="pure-button pure-button-primary">Submit</button>
     </fieldset>
 </form>
 
